5.1
 * Feature Flag for Accord Transactions (CASSANDRA-18195)
 * CEP-15: Multi-Partition Transaction CQL Support (Alpha) (CASSANDRA-17719)
 * CEP-15 (C*): Messaging and storage engine integration (CASSANDRA-17103)
 * Refactor Relation and Restriction hierarchies (CASSANDRA-19341)
 * Raise priority of TCM internode messages during critical operations (CASSANDRA-19517)
 * Add nodetool command to unregister LEFT nodes (CASSANDRA-19581)
 * Add cluster metadata id to gossip syn messages (CASSANDRA-19613)
 * Reduce heap usage occupied by the metrics (CASSANDRA-19567)
 * Improve handling of transient replicas during range movements (CASSANDRA-19344)
 * Enable debounced internode log requests to be cancelled at shutdown (CASSANDRA-19514)
 * Correctly set last modified epoch when combining multistep operations into a single step (CASSANDRA-19538)
 * Add new TriggersPolicy configuration to allow operators to disable triggers (CASSANDRA-19532)
 * Use Transformation.Kind.id in local and distributed log tables (CASSANDRA-19516)
 * Remove period field from ClusterMetadata and metadata log tables (CASSANDRA-19482)
 * Enrich system_views.pending_hints vtable with hints sizes (CASSANDRA-19486)
 * Expose all dropwizard metrics in virtual tables (CASSANDRA-14572)
 * Ensured that PropertyFileSnitchTest do not overwrite cassandra-toploogy.properties (CASSANDRA-19502)
 * Add option for MutualTlsAuthenticator to restrict the certificate validity period (CASSANDRA-18951)
 * Fix StorageService::constructRangeToEndpointMap for non-distributed keyspaces (CASSANDRA-19255)
 * Group nodetool cms commands into single command group (CASSANDRA-19393)
 * Register the measurements of the bootstrap process as Dropwizard metrics (CASSANDRA-19447)
 * Add LIST SUPERUSERS CQL statement (CASSANDRA-19417)
 * Modernize CQLSH datetime conversions (CASSANDRA-18879)
 * Harry model and in-JVM tests for partition-restricted 2i queries (CASSANDRA-18275)
 * Refactor cqlshmain global constants (CASSANDRA-19201)